--- a/paper/main.lagda.tex
+++ b/paper/main.lagda.tex
@@ -55,7 +55,10 @@
 %\usepackage{algorithmicx}%
 %\usepackage{algpseudocode}%
 \usepackage{listings}%
+\usepackage{agda}
+\usepackage{xspace}
 %%%%
+\input{macros}
 
 %%%%%=============================================================================%%%%
 %%%%  Remarks: This template is provided to aid authors with the preparation
@@ -90,7 +93,7 @@
 
 \begin{document}
 
-\title{A Simple Formalization of CP}
+\title{A Logical Solution of the Linearity Challenge}
 
 %%=============================================================%%
 %% GivenName	-> \fnm{Joergen W.}
@@ -136,9 +139,64 @@
 
 \maketitle
 
-\section{Introduction}\label{sec1}
+\section{Introduction}
+\label{sec:introduction}
 
-The Introduction section, of referenced text \cite{bib1} expands on the background of the work (some overlap with the Abstract is acceptable). The introduction should not include subheadings.
+\section{Language}
+
+\[
+    \begin{array}[t]{rcll}
+        P, Q & ::= & \Link\x\y \\
+            & | & \Close\x \\
+            & | & \Fail\x \\
+            & | & \Wait\x.P \\
+            & | & \Select\x{\InTag_i}\z.P \\
+            & | & \Case\x\z{P}{Q} \\
+            & | & \Fork\x\y\z{P}{Q} \\
+            & | & \Join\x\y\z.P \\
+            & | & \Cut\x{P}{Q} \\
+    \end{array}
+\]
+
+\[
+    \begin{array}{rrcll}
+      \SLink &
+      \Link\x\y & \pcong & \Link\y\x \\
+      \SComm &
+      \Cut\x{P}{Q} & \pcong & \Cut\x{Q}{P} \\
+      \SWait &
+      \Cut\x{\Wait\y.P}{Q} & \pcong & \Wait\y.\Cut\x{P}{Q} & x \ne y \\
+      \SFail &
+      \Cut\x{\Fail\y}{P} & \pcong & \Fail\y & x \ne y \\
+      \SSelect &
+      \Cut\x{\Select\y{\InTag_i}\z.P}{Q} & \pcong & \Select\y{\InTag_i}\z.\Cut\x{P}{Q} & x \ne y,z \\
+      \SCase &
+      \Cut\x{\Case\y\z{P}{Q}}{R} & \pcong & \Case\y\z{\Cut\x{P}{R}}{\Cut\x{Q}{R}} & x \ne y,z \\
+      \SForkL &
+      \Cut\x{\Fork\y\u\v{P}{Q}}{R} & \pcong & \Fork\y\u\v{\Cut\x{P}{R}}{Q} & x \in \fn{P}\setminus\set{y,u,v} \\
+      \SForkR &
+      \Cut\x{\Fork\y\u\v{P}{Q}}{R} & \pcong & \Fork\y\u\v{P}{\Cut\x{Q}{R}} & x \in \fn{Q}\setminus\set{y,u,v} \\
+      \SJoin &
+      \Cut\x{\Join\y\u\v.P}{Q} & \pcong & \Join\y\u\v.\Cut\x{P}{Q} & x \ne y,u,v \\
+      \\
+      \RLink &
+      \Cut\x{\Link\x\y}{P} & \red & P\subst\y\x \\
+      \RFail &
+      \Cut\x{\Fail\y}{P} & \red & \Fail\y & x \ne y \\
+      \RClose &
+      \Cut\x{\Close\x}{\Wait\x.P} & \red & P \\
+      \RSelect &
+      \Cut\x{\Select\x{\Tag_i}\y.P}{\Case\x\y{Q_1}{Q_2}} & \red & \Cut\y{P}{Q_i} & i\in\set{1,2} \\
+      \RFork &
+      \Cut\x{\Fork\x\y\z{P}{Q}}{\Join\x\y\z.R} & \red & \Cut\y{P}{\Cut\z{Q}{R}} \\
+      \RCut &
+      \Cut\x{P}{R} & \red & \Cut\x{Q}{R} & P \red Q \\
+      \RCong &
+      P & \red & Q & P \pcong R \red Q \\
+    \end{array}
+\]
+
+Introduction section, of referenced text \cite{bib1} expands on the background of the work (some overlap with the Abstract is acceptable). The introduction should not include subheadings.
 
 Springer Nature does not impose a strict layout as standard however authors are advised to check the individual requirements for the journal they are planning to submit to as there may be journal-level preferences. When preparing your text please also be aware that some stylistic choices are not supported in full text XML (publication version), including coloured font. These will not be replicated in the typeset article if it is accepted. 
 
