--- a/paper/macros.tex
+++ b/paper/macros.tex
@@ -132,11 +132,11 @@
 \newcommand{\Close}[1]{\mkkeyword{close}\,#1}
 \newcommand{\Wait}[1]{\mkkeyword{wait}\,#1}
 \newcommand{\Fail}[1]{\mkkeyword{fail}\,#1}
-\newcommand{\Select}[3]{#1 \triangleleft #2\ifblank{#3}{}{\angles{#3}}}
+\newcommand{\Select}[3]{#1\bracks{#2}\ifblank{#3}{}{\angles{#3}}}
 \newcommand{\Left}[2]{\Select{#1}{\InTag_1}{#2}}
 \newcommand{\Right}[2]{\Select{#1}{\InTag_2}{#2}}
 \newcommand{\Choice}[3][p]{#2 \mathbin{\ifblank{#1}{}{_{#1}}\boxplus} #3}
-\newcommand{\OneCase}[3]{#1\ifblank{#2}{}{\parens{#2}} \triangleright #3}
+\newcommand{\OneCase}[3]{#1\ifblank{#2}{}{\parens{#2}}#3}
 \newcommand{\Case}[4]{\OneCase{#1}{#2}{\braces{#3,#4}}}
 \newcommand{\BigCase}[2]{\OneCase{#1}{\left\{\begin{array}{@{}r@{~:~}l@{}}#2\end{array}\right\}}}
 \newcommand{\Fork}[5]{#1\angles{#2\ifblank{#3}{}{,#3}}\parens{#4,#5}}
