--- a/paper/macros.tex
+++ b/paper/macros.tex
@@ -14,7 +14,7 @@
 %%% NOTATION %%%
 %%%%%%%%%%%%%%%%
 
-\newcommand{\Calculus}{LinearCP\xspace}
+\newcommand{\Calculus}{$\pi$\textsf{LIN}\xspace}
 
 \newcommand{\eg}{\textit{e.g.}\xspace}
 \newcommand{\ie}{\textit{i.e.}\xspace}
