--- a/paper/main.lagda.tex
+++ b/paper/main.lagda.tex
@@ -51,8 +51,11 @@
 \usepackage{listings}
 \usepackage{cleveref}
 \usepackage{mathtools}
+\usepackage{stmaryrd}
+\usepackage{mathpartir}
 \usepackage{agda}
 \usepackage{xspace}
+\usepackage{upgreek}
 %%%%
 \input{macros}
 
