--- a/paper/macros.tex
+++ b/paper/macros.tex
@@ -61,6 +61,7 @@
 \newcommand{\CoreCSLL}{\texorpdfstring{$\textsf{\upshape CSLL}^\infty$}{coreCSLL}\xspace}
 \newcommand{\isdet}{\textsf{\upshape det}}
 \newcommand{\DetCSLL}{$\textsf{\upshape CSLL}^\infty_{\isdet}$\xspace}
+\newcommand{\MALL}{\textsf{\upshape MALL}\xspace}
 \newcommand{\muMALL}{\texorpdfstring{$\mu\textsf{\upshape MALL}^\infty$}{muMALL}\xspace}
 \newcommand{\piLIN}{\texorpdfstring{$\pi\textsf{LIN}$}{piLIN}\xspace}
 \newcommand{\CP}{$\textsf{CP}$\xspace}
