--- a/paper/main.bib
+++ b/paper/main.bib
@@ -7,6 +7,15 @@
 % 3. REMOVE THE url, timestamp, biburl and bibsource ITEMS FROM THE ENTRY
 % 4. REMOVE THE \ IN FRONT OF _ THIS ESCAPE SEQUENCE IS NOT NECESSARY ANY MORE
 
+@book{GayVasconcelos25,
+  title={Session Types},
+  author={Gay, Simon J. and Vasconcelos, Vasco T.},
+  year={2025},
+  publisher={Cambridge University Press},
+  address={Cambridge, UK},
+  doi = {10.1017/9781009000062},
+}
+
 @article{BravettiCZ18,
   author       = {Mario Bravetti and
                   Marco Carbone and
