--- a/paper/calculus.tex
+++ b/paper/calculus.tex
@@ -5,29 +5,33 @@
 \label{sec:syntax}
 
 \begin{table}
-    \caption{Syntax of \Calculus.}
-    \label{tab:syntax}
-    \begin{math}
-        \displaystyle
-        \begin{array}[t]{rcll}
-            P, Q & ::= & \Link\x\y \\
-                & | & \Fail\x \\
-                & | & \Close\x \\
-                & | & \Wait\x.P \\
-                & | & \Select\x{\InTag_i}\z.P \\
-                & | & \Case\x\z{P}{Q} \\
-                & | & \Fork\x\y\z{P}{Q} \\
-                & | & \Join\x\y\z.P \\
-                & | & \Cut\x{P}{Q} \\
-        \end{array}
-    \end{math}
+    \caption{Syntax of \Calculus.}\label{tab:syntax}
+    \begin{tabular}{c}
+        \begin{math}
+            \displaystyle
+            \begin{array}[t]{rcll}
+                P, Q & ::= & \Link\x\y            & \text{link} \\
+                    & | & \Fail\x                 & \text{fail} \\
+                    & | & \Close\x                & \text{close} \\
+                    & | & \Wait\x.P               & \text{wait} \\
+                    & | & \Select\x{\InTag_i}\z.P & \text{select} \\
+                    & | & \Case\x\z{P}{Q}         & \text{branch} \\
+                    & | & \Fork\x\y\z{P}{Q}       & \text{fork} \\
+                    & | & \Join\x\y\z.P           & \text{join} \\
+                    & | & \Server\x\y.P           & \text{accept} \\
+                    & | & \Client\x\y.P           & \text{request} \\
+                    & | & \Weaken\x.P             & \text{weaken} \\
+                    & | & \Contract\x\y\z.P       & \text{contract} \\
+                    & | & \Cut\x{P}{Q}            & \text{cut} \\
+            \end{array}
+        \end{math}
+    \end{tabular}
 \end{table}
 
 The calculus of pure sessions that is formalized in our development is dubbed
-\Calculus and is closely related to the multiplicative, additive fragment of
-CP~\citep{Wadler14}, without shared channels. Its syntax makes use of an
-infinite set of \emph{channel names}, ranged over by $x$, $y$ and $z$, and is
-shown in \cref{tab:syntax}.
+\Calculus and is a linear version of \CP~\citep{Wadler14,GayVasconcelos25}. Its
+syntax makes use of an infinite set of \emph{channel names}, ranged over by $x$,
+$y$ and $z$, and is shown in Table~\ref{tab:syntax}.
 %
 A link $\Link\x\y$ denotes the merging of the $x$ and $y$ channels, so that
 every message sent on one of the channels is forwarded to the other. This form
@@ -36,10 +40,10 @@ esempio!}
 %
 The $\Close\x$ and $\Wait\x.P$ processes respectively model the output and input
 of a termination signal on the channel $x$. The former process has no
-continuation, while the latter process continues as $P$ once the session has
-been terminated.
+continuation, while the latter process continues as $P$ once the signa has been
+received.
 %
-The $\Fail\x$ process denotes a runtime error concerning the session $x$.
+The $\Fail\x$ process denotes a runtime error concerning the channel $x$.
 %
 The $\Select\x{\InTag_i}\z.P$ and $\Case\x\z{Q_1}{Q_2}$ processes respectively
 denote the output and input of a label $\InTag_i$ along with a fresh
@@ -51,16 +55,32 @@ so we stick to the classical case of ``binary choices'' in line with the usual
 presentations of linear logic.
 %
 The $\Fork\x\y\z{P}{Q}$ and $\Join\x\y\z.R$ processes respectively denote the
-output and input of a pair of fresh channels $y$ and $z$ on the channel $x$.
-These forms are often used in conjunction with links to model \emph{free
-outputs}, but can also be used to model bifurcating sessions whereby a
-sequential protocol continues as two parallel sub-protocols.
+output and input of a pair of fresh channels $y$ and $z$ on the channel $x$. The
+former process forks into $P$ and $Q$, each using $y$ and $z$ respectively. The
+latter process continues as $R$. These forms are often used in conjunction with
+links to model \emph{free outputs}, but can also be used to model bifurcating
+sessions whereby a sequential protocol continues as two parallel sub-protocols.
+
+Next we have process forms dealing with shared (non-linear) channels. The
+$\Server\x\y.P$ and $\Client\x\y.P$ processes respectively denote \emph{servers}
+and \emph{clients} acting on the $x$. Each request (from a client) spawns a copy
+of the server's body using the continuation channel $y$. The process
+$\Weaken\x.P$ denotes an explicit \emph{weakening}, that is a client that does
+\emph{not} use the server waiting on $x$. The process $\Contract\x\y\z.P$
+denotes an explicit \emph{contraction}, that is a client that uses the server
+$x$ multiple times on the channels $y$ and $z$.
+
+\emph{Cuts} of the form $\Cut\x{P}{Q}$ represent the parallel composition of $P$
+and $Q$ connected by a channel $x$.
 
 The notions of free and bound names are fairly standard. Just bear in mind that
 all action prefixes bind continuation channels in (some) continuation processes.
 In particular, $\Select\x{\Tag_i}\z.P$ binds $z$ in $P$, $\Case\x\z{P}{Q}$ binds
 $z$ in both $P$ and $Q$, $\Fork\x\y\z{P}{Q}$ binds $y$ in $P$ but not in $Q$ and
 $z$ in $Q$ but not in $P$, and $\Join\x\y\z.P$ binds both $y$ and $z$ in $P$.
+%
+Also, $\Server\x\y.P$ and $\Client\x\y.P$ bind $y$ in $P$ and
+$\Contract\x\y\z.P$ binds $y$ and $z$ in $P$.
 %
 We write $\fn{P}$ for the set of channel names occurring free in $P$ and we
 identify processes up to renaming of bound names.
@@ -71,53 +91,89 @@ identify processes up to renaming of bound names.
 \begin{table}
     \caption{Operational semantics of \Calculus.}
     \label{tab:semantics}
-    \[
-        \begin{array}{rrcll}
-        \SLink &
-        \Link\x\y & \pcong & \Link\y\x \\
-        \SComm &
-        \Cut\x{P}{Q} & \pcong & \Cut\x{Q}{P} \\
-        \SFail &
-        \Cut\x{\Fail\y}{P} & \pcong & \Fail\y & x \ne y \\
-        \SWait &
-        \Cut\x{\Wait\y.P}{Q} & \pcong & \Wait\y.\Cut\x{P}{Q} & x \ne y \\
-        \SSelect &
-        \Cut\x{\Select\y{\InTag_i}\z.P}{Q} & \pcong & \Select\y{\InTag_i}\z.\Cut\x{P}{Q} & x \ne y,z \\
-        \SCase &
-        \Cut\x{\Case\y\z{P}{Q}}{R} & \pcong & \Case\y\z{\Cut\x{P}{R}}{\Cut\x{Q}{R}} & x \ne y,z \\
-        \SForkL &
-        \Cut\x{\Fork\y\u\v{P}{Q}}{R} & \pcong & \Fork\y\u\v{\Cut\x{P}{R}}{Q} & x \in \fn{P}\setminus\set{y,u,v} \\
-        \SForkR &
-        \Cut\x{\Fork\y\u\v{P}{Q}}{R} & \pcong & \Fork\y\u\v{P}{\Cut\x{Q}{R}} & x \in \fn{Q}\setminus\set{y,u,v} \\
-        \SJoin &
-        \Cut\x{\Join\y\u\v.P}{Q} & \pcong & \Join\y\u\v.\Cut\x{P}{Q} & x \ne y,u,v \\
-        \\
-        \RLink &
-        \Cut\x{\Link\x\y}{P} & \red & P\subst\y\x \\
-        % \RFail &
-        % \Cut\x{\Fail\y}{P} & \red & \Fail\y & x \ne y \\
-        \RClose &
-        \Cut\x{\Close\x}{\Wait\x.P} & \red & P \\
-        \RSelect &
-        \Cut\x{\Select\x{\Tag_i}\z.P}{\Case\x\z{Q_1}{Q_2}} & \red & \Cut\z{P}{Q_i} & i\in\set{1,2} \\
-        \RFork &
-        \Cut\x{\Fork\x\y\z{P}{Q}}{\Join\x\y\z.R} & \red & \Cut\y{P}{\Cut\z{Q}{R}} \\
-        \RCut &
-        \Cut\x{P}{R} & \red & \Cut\x{Q}{R} & P \red Q \\
-        \RCong &
-        P & \red & Q & P \pcong R \red Q \\
-        \end{array}
-    \]
+    \begin{tabular}{@{}c@{}}
+        \begin{math}
+            \displaystyle
+            \begin{array}{rrcll}
+            \SLink &
+            \Link\x\y & \pcong & \Link\y\x \\
+            \SComm &
+            \Cut\x{P}{Q} & \pcong & \Cut\x{Q}{P} \\
+            \SFail &
+            \Cut\x{\Fail\y}{P} & \pcong & \Fail\y & x \ne y \\
+            \SWait &
+            \Cut\x{\Wait\y.P}{Q} & \pcong & \Wait\y.\Cut\x{P}{Q} & x \ne y \\
+            \SSelect &
+            \Cut\x{\Select\y{\InTag_i}\z.P}{Q} & \pcong & \Select\y{\InTag_i}\z.\Cut\x{P}{Q} & x \ne y,z \\
+            \SCase &
+            \Cut\x{\Case\y\z{P}{Q}}{R} & \pcong & \Case\y\z{\Cut\x{P}{R}}{\Cut\x{Q}{R}} & x \ne y,z \\
+            \SForkL &
+            \Cut\x{\Fork\y\u\v{P}{Q}}{R} & \pcong & \Fork\y\u\v{\Cut\x{P}{R}}{Q} & x \in \fn{P}\setminus\set{y,u,v} \\
+            \SForkR &
+            \Cut\x{\Fork\y\u\v{P}{Q}}{R} & \pcong & \Fork\y\u\v{P}{\Cut\x{Q}{R}} & x \in \fn{Q}\setminus\set{y,u,v} \\
+            \SJoin &
+            \Cut\x{\Join\y\u\v.P}{Q} & \pcong & \Join\y\u\v.\Cut\x{P}{Q} & x \ne y,u,v \\
+            \SClient &
+            \Cut\x{\Client\y\z.P}{Q} & \pcong & \Client\y\z.\Cut\x{P}{Q} & x \ne y,z \\
+            \SWeaken &
+            \Cut\x{\Weaken\y.P}{Q} & \pcong & \Weaken\y.\Cut\x{P}{Q} & x \ne y \\
+            \SContract &
+            \Cut\x{\Contract\y\u\v.P}{Q} & \pcong & \Contract\y\u\v.\Cut\x{P}{Q} & x \ne y,u,v \\
+            \SServer &
+            \Cut\x{\Server\y\u.P}{\Server\x\v.Q} & \pcong & \Server\y\u.\Cut\x{P}{\Server\x\v.Q} & x \ne y,u \\
+            \\
+            \RLink &
+            \Cut\x{\Link\x\y}{P} & \red & P\subst\y\x \\
+            \RClose &
+            \Cut\x{\Close\x}{\Wait\x.P} & \red & P \\
+            \RSelect &
+            \Cut\x{\Select\x{\Tag_i}\z.P}{\Case\x\z{Q_1}{Q_2}} & \red & \Cut\z{P}{Q_i} & i\in\set{1,2} \\
+            \RFork &
+            \Cut\x{\Fork\x\y\z{P}{Q}}{\Join\x\y\z.R} & \red & \Cut\y{P}{\Cut\z{Q}{R}} \\
+            \RConnect &
+            \Cut\x{\Server\x\y.P}{\Client\x\y.Q} & \red & \Cut\y{P}{Q} \\
+            \RWeaken &
+            \Cut\x{\Server\x\y.P}{\Weaken\x.Q} & \red & \Weaken{\seqof\z}.Q
+            & \fn{P} = \set{y,\seqof\z} \\
+            \RContract &
+            \Cut\x{\Server\x\y.P}{\Contract\x{x'}{x''}.Q} & \red &
+            \multicolumn{2}{l}{
+                \Contract{\seqof\z}{\seqof\z'}{\seqof\z''}.\Cut{x'}{
+                    \Server{x'}\y.P'
+                }{
+                    \Cut{x''}{
+                        \Server{x''}\y.P''
+                    }{
+                        Q
+                    }
+                }
+                ~^*
+            }
+            \\
+            \RCut &
+            \Cut\x{P}{R} & \red & \Cut\x{Q}{R} & P \red Q \\
+            \RCong &
+            P & \red & Q & P \pcong R \red Q \\
+            \\
+            \multicolumn{5}{c}{
+                ~^*
+                \fn{P} = \set{y,\seqof\z},
+                P' = P\subst{\seqof\z'}{\seqof\z},
+                P'' = P\subst{\seqof\z''}{\seqof\z}
+            }
+            \end{array}
+        \end{math}
+    \end{tabular}
 \end{table}
 
-The operational semantics of \Calculus is shown in \cref{tab:semantics} and is
-given by two relations: a \emph{structural pre-congruence} relation $\pcong$ and
-a \emph{reduction} relation $\red$. Structural pre-congruence relates processes
-that we consider to be essentially indistinguishable. Reduction relates
-processes in which a communication occurs. In some presentations of linear
-logic~\cite{Doumane}, these relations are respectively dubbed \emph{external}
-and \emph{internal} reductions. Let us describe the two relations more in
-detail.
+The operational semantics of \Calculus is shown in Table~\ref{tab:semantics} and
+is given by two relations: a \emph{structural pre-congruence} relation $\pcong$
+and a \emph{reduction} relation $\red$. Structural pre-congruence relates
+processes that we consider to be essentially indistinguishable. Reduction
+relates processes in which a communication occurs. In some presentations of
+linear logic~\cite{Doumane}, these relations are respectively dubbed
+\emph{external} and \emph{internal} reductions. Let us describe the two
+relations more in detail.
 
 Structural pre-congruence is the least pre-congruence defined by rule
 \rulename{s-*} rules.
@@ -174,136 +230,7 @@ continuing as described by $B$. The additive constants $\Zero$ and $\Top$ do not
 describe useful protocols, but they can serve the role of smallest/largest type
 in type systems that support a notion of subtyping~\citep{HornePadovani24}.
 
-context syntax and notation
+The notion of \emph{duality} is standard and we write $\dual{A}$ for the dual of
+$A$.
 
-\begin{table}
-    \caption{Operational semantics of \Calculus.}
-    \label{tab:semantics}
-    \begin{mathpar}
-        \inferrule[\LinkRule]{~}{
-            \wtp{
-                \Link\x\y
-            }{
-                x : A, y : \dual{A}
-            }
-        }
-        \and
-        \inferrule[\FailRule]{~}{
-            \wtp{
-                \Fail\x
-            }{
-                \Context, x : \Top
-            }
-        }
-        \and
-        \inferrule[\CloseRule]{~}{
-            \wtp{
-                \Close\x
-            }{
-                x : \One
-            }
-        }
-        \and
-        \inferrule[\WaitRule]{
-            \wtp{
-                P
-            }{
-                \Context
-            }
-        }{
-            \wtp{
-                \Wait\x.P
-            }{
-                \Context, x : \Bot
-            }
-        }
-        \and
-        \inferrule[\SelectRule]{
-            \wtp{
-                P
-            }{
-                \Context, y : A_i
-            }
-        }{
-            \wtp{
-                \Select\x{\Tag_i}\y.P
-            }{
-                \Context, x : A_1 \Plus A_2
-            }
-        }
-        \and
-        \inferrule[\CaseRule]{
-            \wtp{
-                P
-            }{
-                \Context, y : A
-            }
-            \\
-            \wtp{
-                Q
-            }{
-                \Context, y : B
-            }
-        }{
-            \wtp{
-                \Case\x\y{P}{Q}
-            }{
-                \Context, x : A \With B
-            }
-        }
-        \and
-        \inferrule[\ForkRule]{
-            \wtp{
-                P
-            }{
-                \ContextC, y : A
-            }
-            \\
-            \wtp{
-                Q
-            }{
-                \ContextD, z : B
-            }
-        }{
-            \wtp{
-                \Join\x\y\z{P}{Q}
-            }{
-                \ContextC, \ContextD, x : A \Ten B
-            }
-        }
-        \and
-        \inferrule[\JoinRule]{
-            \wtp{
-                P
-            }{
-                \Context, y : A, z : B
-            }
-        }{
-            \wtp{
-                \Join\x\y\z.P
-            }{
-                \Context, x : A \Par B
-            }
-        }
-        \and
-        \inferrule[\CutRule]{
-            \wtp{
-                P
-            }{
-                \ContextC, x : A
-            }
-            \\
-            \wtp{
-                Q
-            }{
-                \ContextD, x : \dual{A}
-            }
-        }{
-            \wtp{
-                \Cut\x{P}{Q}
-            }{
-                \ContextC, \ContextD
-            }
-        }
-    \end{mathpar}
-\end{table}
+context syntax and notation
